test/expected/explain_sibi1.out
explain signed _BitInt(1) x
        ^
9: error: signed _BitInt must be at least 2 bits
